@@ -2,6 +2,7 @@
 v5.0-git
 --------
 
+[mms] Add hook to alter composed message details before sending.
 [mms] DIMP now honors the 'allow_resume_all' configuration option.
 [mms] Remove 'sort_limit' configuration option.
 [mms] Mobile view no longer supports WML output.
